<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:text="@string/celulares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginLeft="182dp"
        android:layout_marginTop="76dp"
        android:text="@string/marcas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:contentDescription="@string/celulares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_phone_iphone_black_24dp" />

    <ImageView
        android:id="@+id/listCel"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCel"
        app:srcCompat="@drawable/ic_list_black_24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="31dp"
        android:text="@string/listarCelulares"
        app:layout_constraintStart_toEndOf="@+id/listCel"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/addCel"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="18dp"
        android:text="@string/cadastrarCelular"
        app:layout_constraintStart_toEndOf="@+id/addCel"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/addMarca"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="175dp"
        android:contentDescription="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listCel"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/cadastrarMarca"
        app:layout_constraintStart_toEndOf="@+id/addMarca"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:contentDescription="@string/marca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_business_center_black_24dp" />

    <ImageView
        android:id="@+id/listMarcas"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMarca"
        app:srcCompat="@drawable/ic_list_black_24dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="21dp"
        android:text="@string/listarMarcas"
        app:layout_constraintStart_toEndOf="@+id/listMarcas"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>